--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
                 "editor.formatOnSave": true
             },
             "extensions": [
-                "ms-python.python"
+                "ms-python.python",
+                "1yib.rust-bundle"
             ]
         }
     },
